# ballistic2d

./: .gitmodules  CMakeLists.txt  README.md
cmake/: CompilerOptions.cmake  EmbedAssets.cmake  Platform.cmake  Version.gen.h.in
core/: CMakeLists.txt  version.h
core/application/: application.cpp  application.h  editor_application.cpp  editor_application.h  game_application.cpp  game_application.h
core/error/: error.cpp  error.h  error_macros.cpp  error_macros.h
core/io/: embedded_resource.cpp  embedded_resource.h  image_loader.cpp  image_loader.h
core/io/impl/: stb_image_impl.cpp
core/rendering/: renderer.cpp  renderer.h
drivers/: CMakeLists.txt
drivers/glfw/: window_driver_glfw.cpp  window_driver_glfw.h
drivers/imgui/: imgui_driver.cpp  imgui_driver.h
drivers/opengl/: ballistic_opengl.h  rendering_device_driver_opengl.cpp  rendering_device_driver_opengl.h
drivers/windows/: window_driver_win32.cpp  window_driver_win32.h
platform/windows/: CMakeLists.txt  console_wrapper.cpp  main_editor.cpp  main_game.cpp
platform/windows/resources/: ballistic.manifest  console_wrapper.rc  editor.rc  game.rc
